# DeepFrida

./: .gitignore  README.md  observe_cot.py  pyproject.toml  repl.py  requirements.txt  run.sh  runner.py  start.sh  test_notebook.ipynb
backend/: __init__.py  config.py  db.py  main.py
backend/routes/: __init__.py  chat.py  conversations.py  metrics.py  models.py  presets.py
backend/services/: __init__.py  observability.py  ollama_async.py  stream_parser.py
docs/archive/: LocalLLM_README.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.module.css  App.tsx  main.tsx  types.ts
frontend/src/components/: ChatWindow.module.css  ChatWindow.tsx  MessageBubble.module.css  MessageBubble.tsx  MetricsPanel.module.css  MetricsPanel.tsx  ParamSliders.module.css  ParamSliders.tsx  PromptLibrary.module.css  PromptLibrary.tsx  Sidebar.module.css  Sidebar.tsx  ThinkBlock.module.css  ThinkBlock.tsx  VirtualMessageList.module.css  VirtualMessageList.tsx
frontend/src/components/markdown/: CodeBlock.module.css  CodeBlock.tsx  MarkdownErrorBoundary.tsx  MarkdownRenderer.tsx  MermaidRenderer.module.css  MermaidRenderer.tsx
frontend/src/hooks/: useMetrics.ts  useStream.ts
frontend/src/lib/: pyodideLoader.ts  themeMode.ts
frontend/src/styles/: global.css
ollama_client/: __init__.py  chat.py  config.py  generate.py  models.py
