[project]
name = "deepfrida"
version = "0.1.0"
description = "Self-contained local LLM workstation for Ollama with FastAPI, React, and SQLite."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "uvicorn>=0.35.0",
]
